--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,9 +36,10 @@
     </div>
   </nav>
 
-  <div  class="jumbotron text-center">
-    <!-- colocar imagem-->
+  <div id="jumboID" class="image jumbotron text-center">
+
       <img id="background-jumbo" class="img-responsive" src="/public/images/capa.png">
+      <h2 id="text-flut" class="">4Bytes<br />Engenharia Júnior</h2>
   </div>
 
   <!-- Container (About Section) -->
