--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,6 +47,12 @@ h4 {
   font-weight: 400;
   margin-bottom: 30px;
 }
+
+.img-thumbnail{
+    border: none;!important;
+}
+
+
 #teste{
     width: 100%;
     height: 40%;
@@ -57,11 +63,10 @@ h4 {
 
 .image {
     position: relative;
-
-
 }
 #jumboID{
   padding-bottom: 10px;!important;
+  background-color: #2b669a;
 }
 
 .jumbotron {
@@ -87,8 +92,13 @@ h4 {
 }
 #background-jumbo{
 position: relative;
+max-height: 70%;
+max-width: 70%;
+  margin-left: 15%;
+}
 
-
+#globe-img{
+  margin-left: 40px;
 }
 
 .logo {
