--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,21 +60,25 @@
   <div id="values" class="container-fluid bg-grey">
     <div class="row">
       <div class="col-sm-4">
-        <span class="glyphicon glyphicon-globe logo slideanim"></span>
+        <span id="globe-img" class="glyphicon glyphicon-globe logo slideanim"></span>
       </div>
       <div class="col-sm-8">
         <h2>Nossos Valores</h2><br>
-        <h4><strong>MISSÃO:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-        <p><strong>VISÃO:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h4>Ter a <b>PREFERÊNCIA</b> do cliente, <b>SEGURANÇA</b> das pessoas acima de tudo, <b>EXCELÊNCIA</b> com simplicidade, Foco em
+          <b>RESULTADOS</b>, <b>COMPROMISSO</b> com o cliente.</h4>
+          <br>
+        <h4><strong>MISSÃO:</strong> Entregar serviços de alta qualidade para micro e pequenas empresas desenvolvendo prossionalmente as habilidades dos alunos de Engenharia da Computação.</h4>
+          <br>
+        <h4><strong>VISÃO:</strong> Ser reconhecida como uma das melhores empresas do ramo no mercado até 2020.</h4>
+          <br>
       </div>
     </div>
   </div>
 
   <!-- Container (Services Section) -->
   <div id="services" class="container-fluid text-center">
-    <h2>SERVICES</h2>
-    <h4>What we offer</h4>
+    <h2>Serviços</h2>
+    <h4>O que oferecemos</h4>
     <br>
     <div class="row slideanim">
       <div class="col-sm-4">
@@ -244,39 +248,56 @@
 
   <!-- Container (Contact Section) -->
   <div id="contact" class="container-fluid bg-grey">
-    <h2 class="text-center">CONTACT</h2>
+    <h2 class="text-center">CONTATO</h2>
     <div class="row">
       <div class="col-sm-5">
-        <p>Contact us and we'll get back to you within 24 hours.</p>
-        <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-        <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+        <p><span class="glyphicon glyphicon-map-marker"></span> São Luís, MA</p>
+        <p><span class="glyphicon glyphicon-envelope"></span> 4bytes.ej@gmail.com</p>
       </div>
       <div class="col-sm-7 slideanim">
         <div class="row">
           <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            <input class="form-control" id="name" name="name" placeholder="Nome" type="text" required>
           </div>
           <div class="col-sm-6 form-group">
             <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
           </div>
         </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+        <textarea class="form-control" id="comments" name="comments" placeholder="Mensagem" rows="5"></textarea><br>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
+            <button class="btn btn-default pull-right" type="submit">Enviar</button>
           </div>
         </div>
       </div>
     </div>
   </div>
+
   <div id="googleMap" style="height:400px;width:100%;"></div>
   <footer class="container-fluid text-center">
-    <a href="#about" title="To Top">
+    <a href="#home" title="#myPage">
       <span class="glyphicon glyphicon-chevron-up"></span>
     </a>
 
+      <div class="row">
+          <div class="col-md-3 list-inline">
+              <h4>Patrocínio</h4>
+              <img class="img-responsive" src="/public/images/fapema_logo.jpg"><br>
+              <img class="img-responsive" src="/public/images/iel_logo.jpg">
+          </div>
+          <div class="col-md-3 list-inline">
+              <h4>Apoio</h4>
+              <img class="img-responsive" src="/public/images/uema_logo.png">
+              <img class="img-responsive" src="/public/images/podio_logo.png">
+          </div>
+          <div class="col-md-3 list-inline">
+              <h4>Parcerias</h4>
+              <img class="img-responsive" src="/public/images/uemanet_logo.png">
+          </div>
 
+      </div>
+    <br>
+    <br>
     <p>Feito com <i class="fa fa-coffee"></i> na 4Bytes Engenharia Júnior.</p>
   </footer>
 
